--- a/gallery.html
+++ b/gallery.html
@@ -132,7 +132,7 @@
     <!-- Navigation menu -->
     <div class="nav-menu">
         <a href="index.html" class="nav-item"><i class="fas fa-home home-icon"></i></a>
-        <a href="Profile.html" class="nav-item"><i class="fas fa-user"></i></a>
+        <a href="profile.html" class="nav-item"><i class="fas fa-user"></i></a>
         <a href="posts.html" class="nav-item"><i class="fas fa-file-alt"></i></a>
     </div>
 </body>
